--- a/package.json
+++ b/package.json
@@ -14,18 +14,24 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "apexcharts": "^3.33.2",
+    "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-hook-form": "^7.29.0",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.34.19"
   },
   "devDependencies": {
+    "@types/faker": "^6.6.9",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "faker": "5.5.3",
+    "miragejs": "^0.1.43",
     "typescript": "^4.6.3"
   }
 }
